--- a/devops/mongo.html
+++ b/devops/mongo.html
@@ -41,8 +41,10 @@
                 <br>
                 <br>
                 <h1>MongoDB</h1>
-                <p>MongoDB es una base de datos NoSQL orientada a documentos diseñada para manejar grandes volúmenes de datos no estructurados. Lanzada en 2009, MongoDB ha ganado popularidad por su flexibilidad, escalabilidad y capacidad de trabajar con datos que no encajan bien en un modelo tabular tradicional. En lugar de tablas y filas como en las bases de datos relacionales, MongoDB utiliza colecciones y documentos.</p>
-                <p>A diferencia de las bases de datos relacionales, MongoDB no requiere esquemas estrictos, lo que permite almacenar datos en formatos flexibles. Esto lo convierte en una opción ideal para aplicaciones modernas que evolucionan rápidamente y manejan datos complejos o en constante cambio.</p>
+                <h2>MongoDB</h2>
+                <p>MongoDB es una base de datos NoSQL orientada a documentos diseñada para gestionar grandes volúmenes de datos no estructurados de manera eficiente. Desde su lanzamiento en 2009, se ha convertido en una de las bases de datos más populares debido a su flexibilidad, escalabilidad y capacidad para trabajar con datos que no se ajustan al modelo relacional tradicional.</p>
+                <p>En lugar de utilizar tablas y filas como en las bases de datos relacionales, MongoDB organiza los datos en colecciones y documentos. Los documentos están formateados en JSON o BSON, lo que permite una representación flexible de la información. Esta estructura facilita el almacenamiento y la recuperación de datos complejos y heterogéneos.</p>
+                <p>A diferencia de las bases de datos relacionales, MongoDB no impone un esquema rígido. Esto significa que los desarrolladores pueden almacenar datos con formatos variados dentro de la misma colección, adaptándose fácilmente a aplicaciones que evolucionan rápidamente o que necesitan manejar datos dinámicos y en constante cambio. Esto lo convierte en una opción ideal para proyectos modernos que demandan agilidad y escalabilidad.</p>                
                 <div class="blog-image">
                     <img src="media/mongodb1.png" alt="">
                 </div>
@@ -414,6 +416,7 @@
                             <button><i class="fa fa-clone"></i><span> Copy</span></button>
                         </div>
                     </div>
+                    <p>Esta consulta obtiene los empleados cuyos nombres comienzan con la letra "A". El símbolo ^ es un ancla que representa el inicio de la cadena.</p>
                     <li><marcador class="resaltado9">$regex</marcador></li>
                     <div class="contenedor">
                         <div class="etiqueta">
@@ -425,7 +428,6 @@
                         </div>
                     </div>
                     <p>Este ejemplo busca artículos cuyo nombre no contenga las palabras 'fácil' ni 'rápido', usando una expresión regular avanzada con lookahead negativo.</p>
-                    <p>Esta consulta obtiene los empleados cuyos nombres comienzan con la letra "A". El símbolo ^ es un ancla que representa el inicio de la cadena.</p>
                     <li><marcador class="resaltado9">$in</marcador></li>
                     <div class="contenedor">
                         <div class="etiqueta">
