--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -93,9 +93,9 @@
                     </ol>
                     <li>⦿ <marcador class="resaltado6">Estados de las Rutas: </marcador>DUAL clasifica las rutas en diferentes estados:</li>
                     <ol>
-                        <li>∘ <marcador class="resaltado8">Rutas Suplementarias: </marcador>Rutas que pueden ser utilizadas si la ruta principal falla.</li>
-                        <li>∘ <marcador class="resaltado8">Rutas Viables: </marcador>Rutas que cumplen con los criterios de DUAL para ser utilizadas.</li>
-                        <li>∘ <marcador class="resaltado8">Rutas No Viables: </marcador>Rutas que no son elegibles para ser utilizadas.</li>
+                        <li><marcador class="resaltado8">Rutas Suplementarias: </marcador>Rutas que pueden ser utilizadas si la ruta principal falla.</li>
+                        <li><marcador class="resaltado8">Rutas Viables: </marcador>Rutas que cumplen con los criterios de DUAL para ser utilizadas.</li>
+                        <li><marcador class="resaltado8">Rutas No Viables: </marcador>Rutas que no son elegibles para ser utilizadas.</li>
                     </ol>
                     <li>⦿ <marcador class="resaltado6">Aseguramiento de Consistencia: </marcador>DUAL utiliza un mecanismo de "diffusing" para garantizar que los cambios en las rutas se propaguen de manera controlada a todos los routers en la red, evitando así bucles de enrutamiento y garantizando la estabilidad.</li>
                 </ul>
