--- a/network/ppp.html
+++ b/network/ppp.html
@@ -112,7 +112,7 @@ Router(config)# write memory</code></pre>
                     </div>
                 </div>
                 <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y las credenciales deben ser correctas.</p>
-                <h3>Cisco con autenticación CHAP o PAP</h3>
+                <h6>Autenticación CHAP</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
@@ -148,7 +148,7 @@ Router(config)# write memory</code></pre>
                     </div>
                 </div>
                 <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y las credenciales deben ser correctas.</p>
-                <h3>Huawei con autenticación CHAP o PAP</h3>
+                <h6>Autenticación CHAP</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
